# stream_projects

./: .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  pytest.ini
docs/: conf.py  index.rst
macropad_midi/: CODE_OF_CONDUCT.rst  LICENSE.rst  README.md  README.rst  code.py  pyproject.toml
macropad_midi/docs/: conf.py  index.rst
macropad_midi/project/: code.py  icm20x_test.py  ui_test.py
